set(erf_lib_name erf_srclib)
add_library(${erf_lib_name} OBJECT)
if (BUILD_SHARED_LIBS)
  set_target_properties(${erf_lib_name} PROPERTIES POSITION_INDEPENDENT_CODE ON)
endif()
include(${CMAKE_SOURCE_DIR}/CMake/BuildERFExe.cmake)
build_erf_lib(${erf_lib_name})
if (ERF_ENABLE_MULTIBLOCK)
  add_subdirectory(DevTests/MultiBlock)
elseif (ERF_ENABLE_REGRESSION_TESTS_ONLY)
  add_subdirectory(DryRegTests/Couette_Poiseuille)
  add_subdirectory(DryRegTests/DensityCurrent)
  add_subdirectory(DryRegTests/EkmanSpiral)
  add_subdirectory(DryRegTests/IsentropicVortex)
  add_subdirectory(DryRegTests/ScalarAdvDiff)
  add_subdirectory(DryRegTests/TaylorGreenVortex)
  add_subdirectory(DryRegTests/TurbulentInflow)
  add_subdirectory(DevTests/MovingTerrain)
else ()
  add_subdirectory(ABL)
  add_subdirectory(MoistRegTests/Bomex)
  add_subdirectory(MoistRegTests/Bubble)
  add_subdirectory(MoistRegTests/SquallLine_2D)
  add_subdirectory(MoistRegTests/SuperCell_3D)
  add_subdirectory(DryRegTests/Couette_Poiseuille)
  add_subdirectory(DryRegTests/DensityCurrent)
  add_subdirectory(DryRegTests/EkmanSpiral)
  add_subdirectory(DryRegTests/IsentropicVortex)
  add_subdirectory(DryRegTests/ParticlesOverWoA)
  add_subdirectory(DryRegTests/ScalarAdvDiff)
  add_subdirectory(DryRegTests/TaylorGreenVortex)
  add_subdirectory(DryRegTests/TurbulentInflow)
  add_subdirectory(DryRegTests/WitchOfAgnesi)
  add_subdirectory(DryRegTests/WPS_Test)
  add_subdirectory(DevTests/LandSurfaceModel)
  add_subdirectory(DevTests/MetGrid)
  add_subdirectory(DevTests/MovingTerrain)
  add_subdirectory(DevTests/Radiation)
  add_subdirectory(DevTests/TemperatureSource)
  add_subdirectory(DevTests/TropicalCyclone)
endif()
